# django-rest

./: .coveragerc  .env-example  .gitignore  .xml  pyproject.toml  pytest.ini
authors/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
authors/class_views/: dashboard.py
authors/migrations/: 0001_initial.py
authors/tests/: __init__.py  test_author_forms.py  test_author_request.py  test_author_urls.py  test_author_views.py
authors/views/: api.py  site.py
core/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  apps.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
recipes/class_views/: home.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_preparation_steps.py  0003_alter_recipe_preparation_time_unit_and_more.py  0004_alter_recipe_cover.py  0005_alter_category_name_alter_recipe_is_published_and_more.py  0006_alter_recipe_slug.py  0007_recipe_tags.py  0008_alter_category_options_alter_recipe_tags.py  0009_remove_recipe_tags.py  0010_recipe_tags.py  0011_alter_recipe_tags.py
recipes/templatetags/: query_filters.py  query_params.py
recipes/tests/: __init__.py  test_pagination.py  test_recipe_models.py  test_recipe_requests.py  test_recipe_urls.py  test_recipe_views.py
recipes/views/: api.py
static_base/global/css/: styles.css
static_base/global/js/: delete-confirm.js  init-toast.js
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py  0002_remove_tag_content_type_remove_tag_object_id.py  0003_tag_content_type_tag_object_id.py  0004_auto_20240806_1119.py  0005_remove_tag_content_type_remove_tag_object_id.py
templates/global/pages/: base.html
tests/functional_tests/: __init__.py  test_author_functional.py  test_recipe_functional.py  test_selenium_browser.py
utils/: browser.py  environment.py  pagination.py
utils/recipes/: factory.py
utils/tests/: factory.py
(+17 files in other folders)
