[project]
name = "django-base"
version = "1.0.0"
description = "A django project for learning propouses"
authors = [
    { name = "Matheus Santos", email = "maasantos776@gmail.com" }
]
dependencies = [
    "Django",
    "python-dotenv",
    "pillow",
    "setuptools",
    "wheel",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "coverage",
    "parameterized",
    "selenium"
]
dev = [
    "Faker",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"